Fixed overflow issue in header

--- a/style.css
+++ b/style.css
@@ -119,6 +119,7 @@ button.btn:hover {
 /* Header */
 header {
   background-color: var(--clr-white);
+  overflow-x: hidden;
 }
 
 .hero {
